This is my rock paper scissor game

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock Paper Scissor</title>
     <!-- Link to the CSS file for styling the game elements -->
-    <link rel="stylesheet" href="RockpaperScissor.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Rock Paper and Scissor</h1>
@@ -39,7 +39,7 @@
     <div class="msg-container">
         <p id="msg">Play your move</p>
     </div>
-    <script src="RockpaperScissor.js"></script>
+    <script src="index.js"></script>
 
 </body>
 </html>
