This is the game

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- Container for the individual rock, paper, and scissor options -->
     <div class="choices">
         <div class="choice" id="Rock">
-            <img src="Rock.png">
+            <img src="rock.png">
         </div>
         <div class="choice" id="Paper">
             <img src="paper.png">
